--- a/note_app/frontend/Notes.html
+++ b/note_app/frontend/Notes.html
@@ -12,7 +12,7 @@
 
         <!-- Form to create a new note -->
         <form id="createNoteForm" class="note-form">
-            <h2>Create New Note</h2>
+            <h2>Note Your Remarkable Memories</h2>
             <input type="text" id="title" placeholder="Title" required>
             <textarea id="content" placeholder="Content" required></textarea>
             <button type="submit">Create Note</button>
